created a simple array that holds pictures, adds those images to the DOM and allows you to select two itterations of the same card to see a potential match.

--- a/memory_1/index.html
+++ b/memory_1/index.html
@@ -24,16 +24,17 @@
                 <li><a href="#tabs-3">Settings</a></li>
             </ul>
             <div id="tabs-1">
-                <div id="cards"></div>
-                <img src="images/back.png" onclick="turn()" class="back" id="back_card" alt="l">
-                <img src="images/back.png" onclick="turn()" class="back" id="back_card" alt="l">
-                <img src="images/back.png" class="back" id="back_card" alt="l">
-                <img src="images/back.png" class="back" id="back_card" alt="l">
-                <img src="images/back.png" class="back" id="back_card" alt="l">
-                <img src="images/back.png" class="back" id="back_card" alt="l">
-                <img src="images/back.png" class="back" id="back_card" alt="l">
-                <img src="images/back.png" class="back" id="back_card" alt="l">
-               
+                <div id="game"></div>
+
+                <!-- <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>
+                <a class="back" href="#"><img src="images/back.png" onclick="turn()"  id="back_card" alt="l"></a>         -->
+
             </div>
             <div id="tabs-2">
                 <fieldset>
