CSS style changes as well as updated JS logic. Will be setting up changes to the level of difficulty of the card game based on user selection.

--- a/memory_1/index.html
+++ b/memory_1/index.html
@@ -55,12 +55,12 @@
                 
                 <label for='num_cards'>Number of cards:</label>
                 <select id='num_cards'>
-                    <option>8</option>
-                    <option>16</option>
-                    <option>24</option>
-                    <option>32</option>
-                    <option>40</option>
-                    <option>48</option>
+                    <option value=8>8</option>
+                    <option value=16>16</option>
+                    <option value=24>24</option>
+                    <option value=32>32</option>
+                    <option value=40>40</option>
+                    <option value=48>48</option>
                 </select><br>
                 
                 <input type='button' id='save_settings' value='Save Settings' onclick="save()">
